# ros-tutorial

./: Cargo.toml  README.md
res/helper_scripts/: inrange.py
res/msg/: Pose.msg
res/ros_packages/kamera/: CMakeLists.txt  package.xml
res/ros_packages/kamera/launch/: kamera.launch
res/ros_packages/rosservices/: CMakeLists.txt  package.xml
res/ros_packages/rosservices/srv/: RectArea.srv
res/ros_packages/turtlesim/: CMakeLists.txt  package.xml
src/: add_two_ints_client.rs  add_two_ints_server.rs  main.rs  opencv_sample.rs  rect_area_client.rs  rect_area_server.rs  turtle.rs  turtle_cleaner.rs  turtle_locator.rs  turtle_operator.rs
