[package]
name = "ros-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosrust = "0.9"
rosrust_msg = "0.1"
crossterm = "0.22.1"

[[bin]]
name = "turtle-locator"
path = "src/turtle_locator.rs"

[[bin]]
name = "turtle-operator"
path = "src/turtle_operator.rs"

[[bin]]
name = "turtle"
path = "src/turtle.rs"

[[bin]]
name = "add-two-ints-server"
path = "src/add_two_ints_server.rs"

[[bin]]
name = "add-two-ints-client"
path = "src/add_two_ints_client.rs"

[[bin]]
name = "rect-area-server"
path = "src/rect_area_server.rs"

[[bin]]
name = "rect-area-client"
path = "src/rect_area_client.rs"

[[bin]]
name = "turtle-cleaner"
path = "src/turtle_cleaner.rs"